--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
         "psr-4": {
             "Alura\\BuscadorDeCursos\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "12",
+        "squizlabs/php_codesniffer": "*",
+        "phan/phan": "^5.5"
     }
 }
